--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.21)
 
 project(amphora_memory_explorer LANGUAGES C)
 
-add_executable(amphora_memexplore main.c
+add_executable(memexplore main.c
 	commands.c)
