--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.21)
 
 project(amphora_memory_explorer LANGUAGES C)
+set(CMAKE_C_STANDARD 90)
+
+string(APPEND CMAKE_C_FLAGS_DEBUG " -DDEBUG -fsanitize=address,undefined -Werror=all -Werror=pedantic -Wextra")
 
 add_executable(memexplore main.c
-	commands.c)
+	heap_handler.c)
