change name to memxplore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_C_STANDARD 90)
 
 string(APPEND CMAKE_C_FLAGS_DEBUG " -DDEBUG -fsanitize=address,undefined -Werror=all -Werror=pedantic -Wextra")
 
-add_executable(memexplore main.c
+add_executable(memxplore main.c
 	heap_handler.c)
